[project]
name = "temporal-mask-tools"
description = "Temporal-mask cleaning tools for ComfyUI: union noisy frames to smooth flicker, then drop one-off specks so your mask sequences stay stable."
version = "1.0.1"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["# Core numeric stack", "numpy>=1.24", "torch>=2.0", "# Image processing", "opencv-python>=4.8", "# Testing utilities", "pytest>=7.4", "pytest-mock>=3.11"]

[project.urls]
Repository = "https://github.com/nomadoor/ComfyUI-Temporal-Mask-Tools"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/nomadoor/ComfyUI-Temporal-Mask-Tools/wiki"
"Bug Tracker" = "https://github.com/nomadoor/ComfyUI-Temporal-Mask-Tools/issues"

[tool.comfy]
PublisherId = "nomadoor"
DisplayName = "ComfyUI-Temporal-Mask-Tools"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

